--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 28 09:44:36 IST 2021
-sdk.dir=/Users/macmini1/Library/Android/sdk
+#Mon Jan 24 09:30:24 CAT 2022
+sdk.dir=C\:\\Java\\android\\android-sdk
